...
              icon="Edit"
              fontStyle={styles.setStatusText}
              color={colors.textLighter}
              onPress={() => {
                navigateInProfile('EditUserStatus', {});
              }}
              testID="Profile:IconWithLabel"
            />
          ) : (
            <UserStatus
              emojiCode={user.status.emoji}
              status={user.status.description}
              showEditIcon
...
                navigateInProfile('EditUserStatus', {
                  emojiCode: user.status?.emoji,
                  status: user.status?.description,
                  endDate: user.status?.endsAt || '',
                });
              }}
              testID="Profile:UserStatus"
            />
          ))}
      </View>
      <Divider />
      <View style={styles.menuContainer}>
        <DrawerItem
...
