...

  return (
    <ProfileStack.Navigator
      screenOptions={{
        ...navHeader,
        presentation: 'card',
        headerBackTestID: 'HeaderBackButton',
      }}
      initialRouteName="ProfileScreen"
    >
      <ProfileStack.Screen
        name="ProfileScreen"
        component={Profile}
...
