...
        title={t('投票')}
        left={
          <HeaderItem label={t('取消')} left onPressItem={cancelAddPoll} />
        }
        right={
          <HeaderItem
            label={t('Done')}
            onPressItem={addPoll}
            disabled={!isPollValid()}
          />
        }
      />
    ) : (
      <CustomHeader title={t('投票')} noShadow />
    );

  return (
    <SafeAreaView style={styles.container} testID="NewPoll:SafeAreaView">
      <Header />
      <ScrollView
        style={styles.pollTypesContainer}
        directionalLockEnabled={true}
        horizontal={true}
        showsHorizontalScrollIndicator={false}
...
        scrollEventThrottle={0}
        keyboardDismissMode="on-drag"
        showsVerticalScrollIndicator={false}
        contentContainerStyle={styles.contentContainer}
        nestedScrollEnabled
        keyboardShouldPersistTaps="never"
        testID="NewPoll:ScrollView"
      >
        {(pollTypeMultiple || pollTypeNumber) && (
          <View style={styles.multipleChoiceContainer}>
            <Controller
              name="minChoice"
              control={control}
...
                          }
                          errorMsg={
                            errors.pollOptions
                              ? errors.pollOptions[index]?.message
                              : ''
                          }
                          testID="NewPoll:TextInput:Options"
                        />
                      )}
                    />
                    <View style={styles.removeOption}>
                      {(index !== 0 || pollOptions.length > 1) && (
                        <Icon
...
                <TouchableOpacity
                  style={styles.addOption}
                  onPress={() => {
                    append({ option: '' });
                    trigger('maxChoice');
                  }}
                  testID="NewPoll:Button:AddOption"
                >
                  <Icon name="Add" />
                  <Text color="primary" style={styles.addOptionText}>
                    {t('添加选项')}
                  </Text>
                </TouchableOpacity>
...
        >
          <TouchableOpacity
            style={styles.dropdownHeader}
            onPress={() => {
              setShowAdvancedSetting(!showAdvancedSetting);
            }}
            testID="NewPoll:Button:AdvancedSettings"
          >
            <Icon name="Settings" color={colors.textLighter} />
            <Text color="lightTextDarker" style={styles.dropdownHeaderText}>
              {t('高级选项')}
            </Text>
            <Icon
...
                    value={value || ''}
                    onChangeText={onChange}
                    onBlur={onBlur}
                    returnKeyType="next"
                    autoCapitalize="none"
                    style={styles.advacedSettingInput}
                    testID="NewPoll:TextInput:Title"
                  />
                )}
              />
              <Controller
                name="groups"
                control={control}
...
