...
    }
  };

  let loading = loadingToggle || loadingUndoVote;

  return (
    <View style={styles.container} testID="PollPreview:View">
      {title && (
        <Text variant="semiBold" style={styles.title}>
          {title}
        </Text>
      )}
      {!canVote && (
...
          </Text>
        )}
      </View>
      {canUndoVote && !isClosed && (
        <Button
          onPress={onUndoVotePoll}
          content={t('Undo Vote')}
          outline={true}
          style={styles.toggleStatusButton}
        />
      )}
      {isCreator && !isCloseFromDate && (
        <Button
          onPress={onToggleStatus}
          content={!isClosed ? t('Close Poll') : t('Open Poll')}
          outline={!isClosed}
          style={styles.toggleStatusButton}
        />
      )}
      {loading && (
        <LoadingOverlay loading={loading} backgroundColor={loadingBackground} />
...
