...
export function PollChoiceCard(props: Props) {
  const { choice, totalOption, onDelete, onEdit, style, totalPoll } = props;
  const { colors } = useTheme();
  const styles = useStyles();

  return (
    <View style={[styles.container, style]} testID="PollChoiceCard:View">
      <Icon name="Chart" size="l" style={styles.pollIcon} />
      <View style={styles.titleContainer}>
        {totalPoll ? (
          <Text>{t('Polls ({total})', { total: totalPoll })}</Text>
        ) : (
          <>
...
        <Icon
          name="Edit"
          size="l"
          color={colors.textLighter}
          style={!!onDelete && styles.ediIcon}
          onPress={onEdit}
          testID="PollChoiceCard:Icon:Edit"
        />
        {!!onDelete && !totalPoll && (
          <Icon
            name="Delete"
            size="l"
            color={colors.textLighter}
...
